--- a/.htaccess
+++ b/.htaccess
@@ -1,14 +1,9 @@
-ErrorDocument 404 /./opps
-ErrorDocument 403 /./opps
-ErrorDocument 500 /./opps
-
 RewriteEngine on 
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME}\.html -f
 RewriteRule ^(.*)$ $1.html [NC,L]
 
-
 RewriteEngine On
-RewriteCond %{HTTP_HOST} ^aboladegreatness\.me [NC]
+RewriteCond %{HTTP_HOST} ^amo-co\.com.ng [NC]
 RewriteCond %{SERVER_PORT} 80
-RewriteRule ^(.*)$ https://aboladegreatness.me/$1 [R,L]
+RewriteRule ^(.*)$ https://amo-co.com.ng/$1 [R,L]
